--- a/web/spring/STS1120/src/main/webapp/WEB-INF/web.xml
+++ b/web/spring/STS1120/src/main/webapp/WEB-INF/web.xml
@@ -29,5 +29,20 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<!-- filter와 filter-mapping을 만들어 준다. 한글깨짐 방지 목적. -->
+	<filter>
+	   <filter-name>encodingFilter</filter-name>
+	   <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+	   <init-param>
+	      <!-- encoidng값을 UTF-8로 만들어 준다. -->
+	      <param-name>encoding</param-name>
+	      <param-value>UTF-8</param-value>
+	   </init-param>
+	</filter>
+	<filter-mapping>
+	   <filter-name>encodingFilter</filter-name>
+	   <url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 </web-app>
