--- a/web/spring/boot-blog/blog/src/main/resources/application.yml
+++ b/web/spring/boot-blog/blog/src/main/resources/application.yml
@@ -6,6 +6,12 @@ server:
       charset: UTF-8
       enabled: true
       force: true
+
+
+cos:
+  key: cos1234 
+#나중에 노출되면 안되는 중요한 키.
+
     
 spring:
   mvc:
@@ -26,7 +32,7 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       use-new-id-generator-mappings: false
-    show-sql: true
+#    show-sql: true
     properties:
       hibernate.format_sql: true
 
