--- a/web/spring/boot-finalProject/wheregoing/pom.xml
+++ b/web/spring/boot-finalProject/wheregoing/pom.xml
@@ -30,6 +30,15 @@
 		  <artifactId>jstl</artifactId>
 		</dependency>
 		
+		<!-- JSONObject import 위해 필요. -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+
+		
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
