--- a/web/spring/boot-finalProject/wheregoing/src/main/resources/application.yml
+++ b/web/spring/boot-finalProject/wheregoing/src/main/resources/application.yml
@@ -16,9 +16,9 @@ spring:
       
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/blog?serverTimezone=Asia/Seoul
-    username: cos
-    password: cos1234
+    url: jdbc:mysql://localhost:3307/wheregoing?serverTimezone=Asia/Seoul
+    username: root
+    password: 1234
     
   jpa:
     open-in-view: true
